# public/swagger.json
@@ -55,6 +55,40 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"StateEnum": {
+				"enum": [
+					0,
+					1,
+					2,
+					3,
+					4,
+					5
+				],
+				"type": "number"
+			},
+			"BookCollectionDTO": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"book": {
+						"$ref": "#/components/schemas/BookDTO"
+					},
+					"available": {
+						"type": "boolean"
+					},
+					"state": {
+						"$ref": "#/components/schemas/StateEnum"
+					}
+				},
+				"required": [
+					"available",
+					"state"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CreateBook": {
 				"properties": {
 					"title": {
@@ -113,6 +147,31 @@
 		"contact": {}
 	},
 	"paths": {
+		"/bookCollections": {
+			"get": {
+				"operationId": "GetAllBookCollections",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/BookCollectionDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"BookCollections"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/books": {
 			"get": {
 				"operationId": "GetAllBooks",
